# tokenizer_large_montecarlo_demo

./: Cargo.toml  README.md
data/: lexitron-license  lexitron_mod.txt
src/: main.rs
