[package]
name = "tokenizer_large_montecarlo_demo"
version = "0.1.0"
authors = ["nattapongs <nattapong.sirilappanich2@ibm.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand="^0.7"
tokenizer={git="https://github.com/NattapongSiri/tokenizer_rs.git", branch="0.1.2", features=["multi-thread"]}
# tokenizer={path="../tokenizer_rs", features=["single-thread"]}